--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,15 @@
     width: 600px;
     height: 400px;
 }
+
+#curWeather h2 {
+    display: inline;
+    width: auto;
+}
+
+.card {
+    margin-left: 1%;
+    margin-right: 1%;
+    background-color: gray;
+    color: white;
+}
