--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,17 @@ aside {
     margin-left: 15px;
 }
 
+aside input {
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+aside button {
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
 #weatherSect {
     display: none;
     float: right;
@@ -32,6 +43,7 @@ aside {
 }
 
 .card {
+    width: 2%;
     margin-left: 1%;
     margin-right: 1%;
     background-color: gray;
